--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		/>
 		<link rel="stylesheet" href="./styles/main.css" />
 		<link rel="stylesheet" href="./styles/home.css" />
-		<title>Love & Serve: Bakery & Cafe</title>
+		<title>Love & Serve: Bakery & Cafe | Home</title>
 	</head>
 	<body>
 		<!-- Navbar -->
@@ -22,8 +22,44 @@
 				<div class="title">
 					<h1>Love & Serve: Bakery & Cafe</h1>
 				</div>
-				<div class="sidebar-toggle">
-					<i class="fa fa-bars fa-3x" aria-hidden="true"></i>
+				<div id="sidebar-toggle">
+					<i class="fa fa-bars fa-3x" id="toggle-icon" aria-hidden="true"></i>
+				</div>
+			</div>
+			<div id="sidebar">
+				<div class="page-links">
+					<ul>
+						<li>
+							<div class="page-img">
+								<img src="./Assets/homepage.png" alt="Home" />
+							</div>
+							<a href="./index.html">Home</a>
+						</li>
+						<li>
+							<div class="page-img">
+								<img src="./Assets/menupage.png" alt="Menu" />
+							</div>
+							<a href="./menu.html">Menu</a>
+						</li>
+						<li>
+							<div class="page-img">
+								<img src="./Assets/locationpage.png" alt="Locations" />
+							</div>
+							<a href="./locations.html">Locations</a>
+						</li>
+						<li>
+							<div class="page-img">
+								<img src="./Assets/aboutpage.png" alt="About" />
+							</div>
+							<a href="./about.html">About Us</a>
+						</li>
+						<li>
+							<div class="page-img">
+								<img src="./Assets/contactpage.png" alt="Contact" />
+							</div>
+							<a href="./contact.html">Contact Us</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -42,38 +78,40 @@
 				<div class="headbar">
 					<h3>Our Menu</h3>
 					<h3>
-						<a href="./menu.html"
-							>Show All <i class="fa fa-chevron-right" aria-hidden="true"></i
-						></a>
+						<a href="./menu.html">Show All <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 					</h3>
 				</div>
 				<div class="menu">
 					<div class="items">
 						<div class="item">
-							<div class="item-img"><img src="./Assets/mocha.jpg" alt="Mocha" /></div>
+							<div class="item-img">
+								<img src="./Assets/menu/mocha.jpg" alt="Mocha" />
+							</div>
 							<p>Mocha</p>
-							<p>₹149</p>
+							<p>₹140</p>
 						</div>
 						<div class="item">
 							<div class="item-img">
-								<img src="./Assets/cappuccino.jpg" alt="Cappuccino" />
+								<img src="./Assets/menu/cappuccino.jpg" alt="Cappuccino" />
 							</div>
 							<p>Cappuccino</p>
-							<p>₹159</p>
+							<p>₹120</p>
 						</div>
 						<div class="item">
-							<div class="item-img"><img src="./Assets/donut.jpg" alt="Donut" /></div>
-							<p>Donuts</p>
-							<p>₹79</p>
+							<div class="item-img">
+								<img src="./Assets/menu/chocolate-glazed-donut.jpg" alt="Donut" />
+							</div>
+							<p>Chocolate Donuts</p>
+							<p>₹70</p>
 						</div>
 					</div>
 					<div class="sale-item">
 						<div class="items-imgs">
 							<div class="items-img">
-								<img src="./Assets/coffee-cup.png" alt="Donut" />
+								<img src="./Assets/categories/coffee-cup.png" alt="Donut" />
 							</div>
 							<div class="items-img">
-								<img src="./Assets/sandwich.png" alt="Cappuccino" />
+								<img src="./Assets/categories/sandwich.png" alt="Cappuccino" />
 							</div>
 						</div>
 						<div class="sale-text">
@@ -132,5 +170,7 @@
 				</div>
 			</div>
 		</footer>
+
+		<script src="./js/sidebar.js"></script>
 	</body>
 </html>
